--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Distortionator Builds/Distortionator 1.0.exe"
+export_path="../builds/Distortionator 1.0.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -23,6 +23,7 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 codesign/enable=false
+codesign/identity_type=0
 codesign/identity=""
 codesign/password=""
 codesign/timestamp=true
@@ -30,7 +31,7 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon=""
+application/icon="res://icon.ico"
 application/file_version=""
 application/product_version=""
 application/company_name="Pedro Braga"
@@ -48,7 +49,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Distortionator Builds/Distortionator 1.0.x86_64"
+export_path="../builds/Distortionator 1.0.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
@@ -73,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Distortionator Builds/web/Distortionator 1.0.html"
+export_path="../builds/web/Distortionator 1.0.html"
 script_export_mode=1
 script_encryption_key=""
 
